--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
   
   <link rel="shortcut icon" href="img/sam.png" type="image/png" />
   
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QFSRG401CL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QFSRG401CL');
+</script>
+  
+  <!-----------------sITE TAG------------------------------------------------>
+  
   <!-- Title and description ================================================== -->
   <title>
-    SAM Ceramics | Home
+    SAM Ceramics | 
   </title>
   
   <!-- Social meta ================================================== -->
