--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,6 +17,10 @@
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QFSRG401CL"></script>
+  <!----------------------------------------------->
+  
   <link rel="shortcut icon" href="../sam.png" type="image/png" />
 
   <!-- Title and description ================================================== -->
