--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
 
   <!-- Title and description ================================================== -->
   <title>
-    About &ndash; SAM Ceramics
+    About &ndash; SAM Ceramics | Ceramics and lighting showroom in Karaikudi | Ceramics showroom near me | Tiles, Lighting showroom Karaikudi|  
   </title>
 
   <!-- Social meta ================================================== -->
