--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ karaikudi tiles shop, chennai rak ceramics, sam ceramics, sam home decors, sam i
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic"> -->
 
+  <!-- Facebook Pixel Code --><script>!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '649016592482123'); fbq('track', 'PageView');</script><noscript> <img height="1" width="1" src="https://www.facebook.com/tr?id=649016592482123&ev=PageView&noscript=1"/></noscript><!-- End Facebook Pixel Code -->
+  
   <!-- Javascript ================================================== -->
 <script src="code.jquery.com/jquery-3.2.1.min.js"></script>  
 <script src="ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script> 
