--- a/pages/about.html
+++ b/pages/about.html
@@ -537,7 +537,7 @@
                             <!-- <h2 style="color:#8a704d">SAM GROUP OF COMPANIES</h2> -->
 
                             <p style="text-align: justify; color:#878787">SAM GROUP OF COMPANIES embarked SAM BUILDERS in 2017 and kick started the first project in PUDHUVAYAL.
-                            SAM GROUP OF COMPANIES inagruated SAM CERAMICS, tiles and sanitaryware showroom at AMARAVATHI PUDHUR in the year 2017 and we hold the distributor rights of 
+                            SAM GROUP OF COMPANIES inagruated <a href="https://samceramics.com">SAM CERAMICS</a>, tiles and sanitaryware showroom at AMARAVATHI PUDHUR in the year 2017 and we hold the distributor rights of 
                             KAG and TECTON tiles across SIVAGANGAI district. SAM CERAMICS inaugurated a branch as SAM HINDUSTAN CERAMICS at PUDHUKOTTAI in the year 2019.
                             As a milestone, SAM GROUP OF COMPANIES inaugurated SAM HOME DECORS, A showroom for hardwares and interior lights at AMARAVATHI PUDHUR in the year 2019.
                             SAM CERAMICS fascinated around 10000 customers in a year of journey, which is one of our best momentum. 
